finishing touches and fixed dark mode

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ nav,
 input,
 textarea {
   width: 100%;
-  background-color: #242424;
+  background-color: #000;
   color: #fff;
   outline: none;
   border: 3px solid #c0c4cc;
@@ -69,7 +69,7 @@ textarea:hover {
 
 input:focus,
 textarea:focus {
-  border-color: #f06449;
+  border-color: #33B8FF;
 }
 
 .title {
@@ -79,8 +79,9 @@ textarea:focus {
   line-height: 1;
 }
 
-.orange {
-  color: #33C1FF !important;
+.blue {
+  /* color: #33C1FF !important; */
+  color: #33B8FF !important;
 }
 
 .click {
@@ -93,7 +94,7 @@ textarea:focus {
 }
 
 .container {
-  padding: 50px 0;
+  padding: 150px 0;
   width: 100%;
 }
 
@@ -122,8 +123,8 @@ textarea:focus {
   background-color: #fff;
 }
 
-.link__hover-effect--black:after {
-  background-color: #242424;
+.link__hover--effect--black:after {
+  background-color: #000;
 }
 
 .link__hover--effect:hover:after {
@@ -144,13 +145,19 @@ textarea:focus {
 .dark-theme .section__subtitle,
 .dark-theme .nav__link--anchor,
 .dark-theme .fa-adjust,
-.dark-theme .header__para {
+.dark-theme .header__para,
+.dark-theme .footer__social--link {
   color: white;
 }
 
 .dark-theme section {
-  background-color: #242424;
+  background-color: #000;
 }
+
+.dark-theme footer {
+  background-color: #000;
+}
+
 
 .dark-theme #personal-logo {
   filter: none;
@@ -161,13 +168,13 @@ textarea:focus {
 }
 
 .dark-theme .scroll__icon:after,
-.dark-theme .link__hover-effect--black:after {
+.dark-theme .link__hover--effect--black:after {
   background-color: white;
 }
 
 .dark-theme .mail__btn {
   background-color: white;
-  color: #242424;
+  color: #000;
 }
 
 /* LANDING PAGE */
@@ -184,6 +191,7 @@ textarea:focus {
   width: 100%;
   max-width: 1000px;
   padding: 0 30px;
+  margin-top: 100px;
 }
 
 .header__para {
@@ -198,8 +206,8 @@ textarea:focus {
 }
 
 .social__link {
-  background-color: #f06449;
-  color: white;
+  background-color: #33B8FF;
+  color: #000;
   padding: 6px;
   width: 32px;
   height: 32px;
@@ -221,7 +229,7 @@ textarea:focus {
 .scroll__icon {
   width: 20px;
   height: 30px;
-  border: 2px solid #242424;
+  border: 2px solid #000;
   border-radius: 24px;
   display: flex;
   align-items: center;
@@ -232,7 +240,7 @@ textarea:focus {
   content: "";
   width: 4px;
   height: 6px;
-  background-color: #242424;
+  background-color: #000;
   border-radius: 2px;
   animation: scroll 1000ms infinite alternate-reverse;
 }
@@ -253,7 +261,7 @@ textarea:focus {
   font-size: 32px;
   border-radius: 50%;
   border: none;
-  background-color: #242424;
+  background-color: #000;
   color: white;
   position: fixed;
   bottom: 32px;
@@ -357,7 +365,7 @@ textarea:focus {
 
 .modal__contact {
   transform: translateX(110%);
-  background-color: #242424;
+  background-color: #000;
   color: white;
 }
 
@@ -375,8 +383,8 @@ textarea:focus {
 }
 
 .form__submit {
-  background-color: #f06449;
-  border: 2px solid #f06449;
+  background-color: #33B8FF;
+  border: 2px solid #33B8FF;
   color: white;
   font-weight: 700;
   width: 100%;
@@ -392,8 +400,8 @@ textarea:focus {
 }
 
 .form__submit:active {
-    border-color: #f06449;
-    color: #f06449;
+    border-color: #33B8FF;
+    color: #33B8FF;
 }
 
 .modal__overlay {
@@ -409,7 +417,7 @@ textarea:focus {
 }
 
 .modal__overlay--loading {
-  background-color: #242424;
+  background-color: #000;
   font-size: 80px;
 }
 
@@ -462,13 +470,13 @@ textarea:focus {
 }
 
 .shape--3 {
-  top: 50vh;
+  top: 45vh;
   left: 5vw;
 }
 
 .shape--4 {
   top: 50vh;
-  left: 50vw;
+  left: 55vw;
 }
 
 .shape--5 {
@@ -520,7 +528,7 @@ nav {
 .nav__link--anchor {
   text-decoration: none;
   font-size: 16px;
-  color: #242424;
+  color: #000;
   font-weight: 700;
 }
 
@@ -612,7 +620,7 @@ nav {
 
 footer {
   position: relative;
-  background-color: #242424;
+  background-color: #999999;
   display: flex;
   padding: 6% 0;
 }
@@ -656,7 +664,7 @@ footer {
 
 .footer__social--link,
 .footer__copyright {
-  color: white;
+  color: black;
 }
 
 
